Fix select alignment

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -2,20 +2,28 @@ form {
   padding: 1rem;
 }
 
-input[type=text], input[type=number], input[type=password], input[type=submit], select {
+label {
+  font-size: 14px;
+}
+
+input:not([type=radio]), select {
   font-family: 'Courier', Helvetica, sans-serif;
 	font-size: 1rem;
-  padding: 0 0.5rem;
-	-webkit-appearance: none;
+  padding: 0 0.25rem;
+  height: 2rem;
 	border: none;
 	border-radius: 0;
 	background: #fff;
-  height: 2rem;
-  min-width: 240px;
+  min-width: 200px;
+  max-width: 400px;
+}
+
+input:not([type=radio]) {
+  width: calc(100% - 0.5rem);
+}
+
+select {
   width: 100%;
-  @media screen and (min-width: 720px) {
-    width: 400px;
-  }
 }
 
 input[type=submit] {
