--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,4 +1,4 @@
-#map-container {
+#map_container {
   display: flex;
   align-items: center;
   justify-content: center;
